// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RemoteImage renders and toggles loading 1`] = `
<View
  style={Object {}}
>
  <View
    style={
      Array [
        Array [
          Object {},
          undefined,
          undefined,
        ],
        Object {
          "overflow": "hidden",
        },
      ]
    }
  >
    <FastImageView
      onFastImageError={[Function]}
      onFastImageLoadEnd={[Function]}
      resizeMode="cover"
      source={
        Object {
          "uri": "https://d3iw72m71ie81c.cloudfront.net/male-47.jpg",
        }
      }
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </View>
</View>
`;

exports[`RemoteImage renders with all props 1`] = `
<View
  style={Object {}}
>
  <View
    style={
      Array [
        Array [
          Object {},
          Object {
            "borderRadius": 10,
          },
          Object {
            "backgroundColor": "blue",
          },
        ],
        Object {
          "overflow": "hidden",
        },
      ]
    }
  >
    <FastImageView
      onFastImageError={[Function]}
      onFastImageLoadEnd={[Function]}
      resizeMode="cover"
      source={
        Object {
          "uri": "https://d3iw72m71ie81c.cloudfront.net/male-47.jpg",
        }
      }
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#E0E0E0",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "borderRadius": 10,
        },
      ]
    }
  >
    <ActivityIndicator
      animating={true}
      color="green"
      hidesWhenStopped={true}
      size="large"
    />
  </View>
</View>
`;

exports[`RemoteImage renders with error 1`] = `
<View
  style={Object {}}
>
  <View
    style={
      Array [
        Array [
          Object {},
          undefined,
          undefined,
        ],
        Object {
          "overflow": "hidden",
        },
      ]
    }
  >
    <FastImageView
      onFastImageError={[Function]}
      onFastImageLoadEnd={[Function]}
      resizeMode="cover"
      source={
        Object {
          "uri": "https://d3iw72m71ie81c.cloudfront.net/male-47.jpg",
        }
      }
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#E0E0E0",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 12,
          },
          Array [
            Object {
              "color": "#212121",
              "fontSize": 24,
            },
            undefined,
          ],
          Object {
            "fontFamily": "Material Icons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`RemoteImage renders with minimum required props 1`] = `
<View
  style={Object {}}
>
  <Image
    onError={[Function]}
    onLoadEnd={[Function]}
    resizeMode="cover"
    style={
      Array [
        Object {},
        undefined,
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#E0E0E0",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
      ]
    }
  >
    <ActivityIndicator
      animating={true}
      color="#212121"
      hidesWhenStopped={true}
      size="large"
    />
  </View>
</View>
`;
